# MCU_JLINK

./: .gitignore  CMakeLists.txt  Makefile  arm-eabi.cmake  jlink_swd.cfg
Core/: CMakeLists.txt
Core/Inc/: stm32f4xx_hal_conf.h
Core/Src/: main.c
Drivers/: CMakeLists.txt
